ISPN-10164 Ensure that all tests are running with the correct JVM version