@@ -132,28 +132,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration combine.self="override">
-                    <argLine>${forkJvmArgs} ${testjvm.jigsawArgs} -Djdk.attach.allowAttachSelf=true</argLine>
+                <configuration>
+                    <parallel>none</parallel>
                     <groups combine.self="override">${defaultJUnitGroups}</groups>
                     <excludedGroups combine.self="override">${defaultExcludedJUnitGroups}</excludedGroups>
-                    <systemPropertyVariables>
-                       <!-- Copied from parent POM -->
-                       <infinispan.test.jgroups.protocol>${infinispan.test.jgroups.protocol}</infinispan.test.jgroups.protocol>
-                       <jgroups.bind_addr>127.0.0.1</jgroups.bind_addr>
-                       <jgroups.join_timeout>2000</jgroups.join_timeout>
-                       <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
-                       <log4j.configurationFile>${log4j.configurationFile}</log4j.configurationFile>
-                       <build.directory>${project.build.directory}</build.directory>
-                       <com.arjuna.ats.arjuna.common.propertiesFile>test-jbossts-properties.xml</com.arjuna.ats.arjuna.common.propertiesFile>
-
-                       <!-- this is picked up in the log4j xml which prepends it to each module's log file-->
-                       <infinispan.module-suffix>${infinispan.module-suffix}</infinispan.module-suffix>
-                       <ansi.strip>${ansi.strip}</ansi.strip>
-                       <!-- Log the correct thread name after we call Thread.setName(),
-                            see https://issues.apache.org/jira/browse/LOG4J2-2052 -->
-                       <AsyncLogger.ThreadNameStrategy>UNCACHED</AsyncLogger.ThreadNameStrategy>
-                    </systemPropertyVariables>
-                    <trimStackTrace>false</trimStackTrace>
                     <properties>
                        <!-- Deactivate the default listeners which may cause OOME. Jenkins uses the surefire generated XML file. -->
                        <usedefaultlisteners>false</usedefaultlisteners>
